--- a/{{cookiecutter.project_name}}/.gitignore
+++ b/{{cookiecutter.project_name}}/.gitignore
@@ -132,3 +132,12 @@ dmypy.json
 .idea/
 AUTHORS
 ChangeLog
+
+# ta2fb - for cdk
+.cdk.staging
+cdk.out
+cdk.context.json
+
+# ta2fb - for biocore.aws-cdk-lambda-asset
+.build
+*.zip
