--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -4,10 +4,13 @@ author = {{cookiecutter.author}}
 author_email = {{cookiecutter.author_email}}
 long_description = file: README.rst
 url = https://git-codecommit.us-east-1.amazonaws.com/v1/repos/{{cookiecutter.project_name}}
-python_requires = >=3.8
+python_requires = >=3.6
 classifiers =
-    Programming Language :: Python :: 3
-    Operating System :: OS Independent
+    Intended Audience :: Developers
+    License :: OSI Approved :: Apache Software License
+    Programming Language :: Python :: 3 :: Only
+    Topic :: Software Development :: Code Generators
+    Topic :: Utilities
 
 [extras]
 dev =
