fix python version in tox.ini, fix flake8 path, change line limit to 119

--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py38
+envlist=py36
 requires=tox-conda
 
 [testenv]
@@ -8,7 +8,7 @@ deps=
     flake8
     pytest
 commands=
-    flake8 {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
+    flake8 {{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}
     pytest
     python3 setup.py clean --all bdist_wheel
 
@@ -37,7 +37,7 @@ deps=
     -rrequirements.txt
     flake8
 commands=
-    flake8 {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
+    flake8 {{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}
 
 [testenv:release]
 deps=
@@ -47,7 +47,7 @@ deps=
     pytest-cov
     sphinx
 commands=
-    flake8 {{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
+    flake8 {{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}
     pytest
     python3 setup.py clean --all bdist_wheel
     python3 setup.py build_sphinx
