--- a/{{cookiecutter.project_name}}/setup.cfg
+++ b/{{cookiecutter.project_name}}/setup.cfg
@@ -14,7 +14,7 @@ classifiers =
 
 [extras]
 dev =
-    docutils~=0.10
+    docutils<0.16,>=0.10
     Pygments~=2.6
     pytest~=5.4
     s3pypi~=0.10
