add google doc extension, list lines for missing code coverage

--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -23,7 +23,7 @@ deps=
     -rrequirements.txt
     pytest-cov
 commands=
-    pytest --cov={{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
+    pytest --cov={{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}} --cov-report term-missing
 
 [testenv:docs]
 deps=
@@ -51,7 +51,7 @@ commands=
     pytest
     python3 setup.py clean --all bdist_wheel
     python3 setup.py build_sphinx
-    pytest --cov={{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}}
+    pytest --cov={{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}} --cov-report term-missing
 
 [testenv:run_tests]
 deps=
