--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -7,9 +7,10 @@ deps=
     -rrequirements.txt
     flake8
     pytest
+    pytest-xdist
 commands=
     flake8 {{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}
-    pytest
+    pytest -n 4
     python3 setup.py clean --all bdist_wheel
 
 [testenv:build]
@@ -22,8 +23,9 @@ commands=
 deps=
     -rrequirements.txt
     pytest-cov
+    pytest-xdist
 commands=
-    pytest --cov={{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}} --cov-report term-missing
+    pytest -n 4 --cov={{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}} --cov-report term-missing
 
 [testenv:docs]
 deps=
@@ -45,17 +47,19 @@ deps=
     flake8
     pytest
     pytest-cov
+    pytest-xdist
     sphinx
 commands=
     flake8 {{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}
     pytest
     python3 setup.py clean --all bdist_wheel
     python3 setup.py build_sphinx
-    pytest --cov={{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}} --cov-report term-missing
+    pytest -n 4 --cov={{cookiecutter.namespace_name}}.{{cookiecutter.subpackage_name}} --cov-report term-missing
 
 [testenv:run_tests]
 deps=
     -rrequirements.txt
     pytest
+    pytest-xdist
 commands=
-    pytest
+    pytest -n 4
