missing sphinxcontrib.napoleon in tox.ini

--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -31,6 +31,7 @@ commands=
 deps=
     -rrequirements.txt
     sphinx
+    sphinxcontrib.napoleon
 commands=
     python3 setup.py build_sphinx
 
@@ -49,6 +50,7 @@ deps=
     pytest-cov
     pytest-xdist
     sphinx
+    sphinxcontrib.napoleon
 commands=
     flake8 {{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}
     pytest
