add option to push to code artifact, fix tox.ini python version, fix issues

--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py36
+envlist=py{{cookiecutter.python_version[0]}}{{cookiecutter.python_version[2]}}
 requires=tox-conda
 
 [testenv]
