use the readthedocs theme

--- a/{{cookiecutter.project_name}}/tox.ini
+++ b/{{cookiecutter.project_name}}/tox.ini
@@ -31,6 +31,7 @@ commands=
 deps=
     -rrequirements.txt
     sphinx
+    sphinx-rtd-theme
     sphinxcontrib.napoleon
 commands=
     python3 setup.py build_sphinx
@@ -50,6 +51,7 @@ deps=
     pytest-cov
     pytest-xdist
     sphinx
+    sphinx-rtd-theme
     sphinxcontrib.napoleon
 commands=
     flake8 {{cookiecutter.namespace_name}}/{{cookiecutter.subpackage_name}}
